<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    app:layout_scrollFlags="scroll|enterAlways"
    app:layout_collapseMode="pin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/number_question"
        android:text="@string/number_question"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:textColor="@android:color/white"/>

    <android.support.v7.widget.SwitchCompat
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_gravity="end"
        android:id="@+id/scChangeLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/russian"
        android:textOff="@string/rus"
        android:textOn="@string/ang"
        app:showText="false"
        android:theme="@style/MySwitch"
        android:textColor="@android:color/white"/>

</android.support.v7.widget.Toolbar>